# open-secret

./: README.md
next-app/: .env.example  README.md  next.config.js  package.json  pnpm-lock.yaml
next-app/app/: globals.css  page.tsx
next-app/app/[accountId]/: page.tsx
next-app/app/dashboard/: page.tsx
next-app/components/: chat-list.tsx  chat-message-actions.tsx  chat-message.tsx  chat-panel.tsx  chat.tsx  connect-wallet.tsx  feed-scroll.tsx  header.tsx  profile-card.tsx  prompt-form.tsx
next-app/lib/: constants.ts  types.ts  utils.ts
next-app/lib/data/: graphql-service.ts  (+3 more)
open-secret-chat/: README.md  next.config.js  pnpm-lock.yaml
open-secret-chat/app/: globals.css  layout.tsx
open-secret-chat/components/: chat-message-actions.tsx  chat.tsx  connect-wallet.tsx  dynamic-grid.tsx  header.tsx
open-secret-contract/: Cargo.toml  README.md
open-secret-contract/neardev/: dev-account  dev-account.env
open-secret-contract/scripts/calls/: add-metadata.sh  deploy.sh  init.sh  mint.sh
open-secret-contract/scripts/views/: get-metadata-paginated.sh  get-metadata.sh  get-public-keys.sh  get-tokens-by-public-key.sh
open-secret-contract/src/: lib.rs
open-secret-dashboard/: .env.example  package.json  pnpm-lock.yaml
open-secret-dashboard/app/: _page.tsx  layout.tsx  page.tsx
open-secret-dashboard/components/: chat-list.tsx  chat-panel.tsx  connect-wallet.tsx  dashboard.tsx  header.tsx  not-connected.tsx  private-data-table.tsx  profile-card.tsx  theme-toggle.tsx  voice-input-button.tsx
open-secret-dashboard/lib/: constants.ts  types.ts  utils.ts
(+33 files in other folders)
