[package]
name = "minsta_proxy_minter"
version = "0.0.1"
authors = ["microchipgnu"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
near-sdk = "4.1.1"
near-contract-standards = "4.1.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true